src/main/resources/static/static/css/demo.css
.funny{
    font-size: 10px;
    font-style: italic;
}

.tada{
    font-size: 50px;

    color: aqua;
    font-style: italic;
}
.nav-position{
    position: relative;
}
.form-center{
    alignment: center;
}
.login-form{
    width:412px;
    margin: 10vh auto;
    background-color: #f3f3f3;
    box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}
li {
  display: inline;
}
tr {
    display: table;
    width: 100%;
}
h3 {
    position: relative;
    animation: mymove 5s infinite;
    animation-direction: alternate;

}
@keyframes mymove {
    from {left: 40px}
    to {left: 500px}

}
html, body {
    height: 100%;
}
#container {
    min-height: 100%;
}
#main{
    overflow: auto;
    padding-bottom: 30px;
}
.foot {
    position: relative;
    vertical-align : bottom;
    margin-top: -55px;

    height : 1px;
}
.siteTitle {
    text-align: center;
    font-style: oblique;
    color: forestgreen;

}

.border {
    border: 10px black;
}

.box {
    align-content: center;

    box-shadow: black;
    border: 10px black;
}


.trash{
    background-image: url("../images/node_modules/bootstrap-icons/icons/trash-fill.svg");
    float: right;
}

.pencil{
    background-image: url("../images/node_modules/bootstrap-icons/icons/pencil.svg");
    float: right;
}

.right-align {
    float: right;
}
.pad-login-message {
    margin-right: 10px;
}
.pad-card{
    margin-bottom: 40px;
    margin-left: 60px;
    margin-top: 40px;
}
.no-wrap{
    white-space: nowrap;
}
.hidden{
    visibility: hidden;
}
/* The hero image */
.hero-image {
    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
    background-image: url("../images/Spring.jpg");
    width: 100vw;
    height: 100vh;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    position: relative;
}

.nav-text{
    font-size: small;
    height: 50%;
}

.current-page {
    font-weight: bold;
    color: forestgreen;
}
/* Place text in the middle of the image */
.hero-text {
    text-align: center;
    position: absolute;
    top: 25%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: mediumseagreen;
    font-style: normal;
}

.hero-title{
    font-family: 'Candara', cursive;
    font-size: 50px;
}

